--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.436.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.6",
+    "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
